--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "Default": "Server=localhost;Port=5432;User Id=postgres;Password=Dl9ca#)$!;Database=docwelltestdb;"
   },
+  "Secrets": {
+    "Default": "Test"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
