--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -3,7 +3,7 @@
     "Default": "Server=localhost;Port=5432;User Id=postgres;Password=Dl9ca#)$!;Database=docwelltestdb;"
   },
   "Secrets": {
-    "Default": "Test"
+    "Password": "Test"
   },
   "Logging": {
     "LogLevel": {
